release: final project submission for 2025CSET152  Project: The Logic-Gate Vault Team: V8 Logic Systems | Batch 33 Author: Arshpreet Singh (S25CSEU0980)  - Finalized the complete DFD architecture (P1-P4) with persistent data stores. - Implemented and verified all core OOP principles (Abstraction, Encapsulation, Inheritance, Polymorphism). - Resolved evaluation feedback: fixed ActivityLogger JVM truncation and synchronized thread-safe file I/O. - Finalized Swing GUI with Role-Based Access Control (RBAC), Key Escrow, and mock Cloud Sync. - Prepared repository with complete README and MIT License for final grading.